# precord

./: .gitignore  README.md  pyproject.toml  run.sh
src/precord/: __init__.py  database.py  monitor.py  values.py  web.py
src/precord/templates/: error.html
